
Revision 4.3.5, released 2017-0X-XX
-----------------------------------

- The getNext() and getBulk() calls of Twisted interface 
  now support ignoreNonIncreasingOid option.
- Fix to accidentally reset error-status when building confirmed class
  SNMPv1 PDU

Revision 4.3.4, released 2017-03-01
-----------------------------------

- Fix to low-level SNMP API example to accommodate changed pyasn1
  SEQUENCE supporting iterator protocol.
- The pyasn1 version dependency bumped (0.2.3), SEQUENCE/SEQUENCE OF
  API calls adjusted to accommodate changed pyasn1 API (in part
  of .setComponentBy*() kw flags).
- Fixed crash on SNMP engine's invalid message counter increment.

Revision 4.3.3, released 2017-02-04
-----------------------------------

- Switched from now unmaintained PyCrypto to PyCryptodome.
- Switched to new-style classes.
- NotificationType now allows additional var-binds specified as
  MIB objects. A side effect of this change is that additional
  var-binds can only be added prior to .resolveMibObjects() is
  run.
- Non-standard (but apparently used by many vendors) Reeder AES192/256
  key localization algorithm implemented and set as default for
  usmAesCfb192Protocol and usmAesCfb256Protocol identifiers.
  Original and more standard implementation can still be used
  with the usmAesBlumenthalCfb192Protocol and
  usmAesBlumenthalCfb192Protocol IDs respectively.
- TextualConvention.prettyOut() improved to produce prettier and
  more SMI-compliant output.
- TextualConvention.prettyIn() implemented to handle DISPLAY-HINT
  based value parsing.
- Fix to NotificationType to make additional var-binds overriding
  MIB objects implicitly included through NOTIFICATION-TYPE OBJECTS.
- Fix to SNMP engine boots counter persistence on Python 3.
- Fix to Pythonized MIBs loading when only .pyc files are
  present (e.g. py2exe/cx_freeze environments).
- Fix broken 3DES key localization and encryption procedures.
- Updated IP address for demo.snmplabs.com in examples.